# SpaceLife

./: CMakeLists.txt  README.md  Toolchain-mingw32.cmake  Toolchain-mingw64.cmake
include/: Action.h  Config.h  Device.h  Exceptions.h  Game.h  Path.h  Player.h  Squadron.h  Unit.h  UnitManager.h  Window.h
src/: Action.cpp  Game.cpp  GameUI.cpp  Path.cpp  Player.cpp  Squadron.cpp  Unit.cpp  UnitManager.cpp  Window.cpp  main.cpp
